Use position absolute to work around rendering issue
See
https://github.com/desktop/desktop/pull/156/files/1e1fef56dfc01cd4c8804a699f2117e512c55981#r72529904

Without this the hit detection in electron would be all messed up.

--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -6,7 +6,6 @@
   flex-direction: column;
   flex-shrink: 0;
   margin-top: auto;
-  z-index: 1;
 
   display: flex;
   background-color: var(--box-alt-background-color);
